# BrainF-ck_Gen

./: .gitignore  Cargo.toml  TODO  script.py
brainfuck-core/: Cargo.toml
brainfuck-core/src/: data.rs  lib.rs  run.rs  search.rs  util.rs
brainfuck-main/: Cargo.toml
brainfuck-main/src/: main.rs
brainfuck-tui/: Cargo.toml
brainfuck-tui/src/: app.rs  lib.rs  main.rs  raw_terminal.rs
src/: data.rs  main.rs  run.rs  tmp.rs
